--- a/man/zip_set_archive_flag.html
+++ b/man/zip_set_archive_flag.html
@@ -76,6 +76,11 @@ The <code class="Fn">zip_set_archive_flag</code>() function sets the flag
   <dd>If this flag is cleared, the archive file will be removed if the archive
       is empty. If it is set, an empty archive will be created, which is not
       recommended by the zip specification.</dd>
+  <dt><a class="permalink" href="#ZIP_AFL_RDONLY"><code class="Dv" id="ZIP_AFL_RDONLY">ZIP_AFL_RDONLY</code></a></dt>
+  <dd>If this flag is set, no modification to the archive are allowed. This flag
+      can only be cleared if it was manually set with
+      <code class="Nm">zip_set_archive_flag</code>, not if the archive was
+      opened read-only.</dd>
   <dt><a class="permalink" href="#ZIP_AFL_WANT_TORRENTZIP"><code class="Dv" id="ZIP_AFL_WANT_TORRENTZIP">ZIP_AFL_WANT_TORRENTZIP</code></a></dt>
   <dd>If this flag is set, the archive will be written in torrentzip
     format.</dd>
@@ -110,7 +115,7 @@ Upon successful completion 0 is returned, and -1 if an error occurred.
 </div>
 <table class="foot">
   <tr>
-    <td class="foot-date">January 23, 2023</td>
+    <td class="foot-date">July 19, 2023</td>
     <td class="foot-os">NiH</td>
   </tr>
 </table>
