--- a/man/zip_source_filep.html
+++ b/man/zip_source_filep.html
@@ -80,8 +80,9 @@ The functions <code class="Fn">zip_source_filep</code>() and
   <code class="Fn">zip_source_filep_create</code>() create a zip source from a
   file stream. They read <var class="Ar">len</var> bytes from offset
   <var class="Ar">start</var> from the open file stream
-  <var class="Ar">file</var>. If <var class="Ar">len</var> is 0 or -1, the whole
-  file (starting from <var class="Ar">start</var>) is used.
+  <var class="Ar">file</var>. For a description of the <var class="Ar">len</var>
+  argument, see
+  <a class="Xr" href="zip_source_file.html">zip_source_file(3)</a>.
 <p class="Pp">If the file stream supports seeking, the source can be used to
     open a read-only zip archive from.</p>
 <p class="Pp">The file stream is closed when the source is being freed, usually
@@ -112,12 +113,16 @@ Upon successful completion, the created source is returned. Otherwise,
 <a class="Xr" href="libzip.html">libzip(3)</a>,
   <a class="Xr" href="zip_file_add.html">zip_file_add(3)</a>,
   <a class="Xr" href="zip_file_replace.html">zip_file_replace(3)</a>,
-  <a class="Xr" href="zip_source.html">zip_source(3)</a>
+  <a class="Xr" href="zip_source.html">zip_source(3)</a>,
+  <a class="Xr" href="zip_source_file.html">zip_source_file(3)</a>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="HISTORY"><a class="permalink" href="#HISTORY">HISTORY</a></h1>
 <code class="Fn">zip_source_filep</code>() and
   <code class="Fn">zip_source_filep_create</code>() were added in libzip 1.0.
+<p class="Pp"><code class="Dv">ZIP_LENGTH_TO_END</code> and
+    <code class="Dv">ZIP_LENGTH_UNCHECKED</code> were added in libzip
+  1.10.1.</p>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="AUTHORS"><a class="permalink" href="#AUTHORS">AUTHORS</a></h1>
@@ -129,7 +134,7 @@ Upon successful completion, the created source is returned. Otherwise,
 </div>
 <table class="foot">
   <tr>
-    <td class="foot-date">December 18, 2017</td>
+    <td class="foot-date">June 30, 2023</td>
     <td class="foot-os">NiH</td>
   </tr>
 </table>
