--- a/man/zip_source_win32w.html
+++ b/man/zip_source_win32w.html
@@ -80,8 +80,9 @@ The functions <code class="Fn">zip_source_win32w</code>() and
   <code class="Fn">zip_source_win32w_create</code>() create a zip source on
   Windows using a Windows Unicode name. They open <var class="Ar">fname</var>
   and read <var class="Ar">len</var> bytes from offset
-  <var class="Ar">start</var> from it. If <var class="Ar">len</var> is 0 or -1,
-  the whole file (starting from <var class="Ar">start</var>) is used.
+  <var class="Ar">start</var> from it. For a description of the
+  <var class="Ar">len</var> argument, see
+  <a class="Xr" href="zip_source_file.html">zip_source_file(3)</a>.
 <p class="Pp">If the file supports seek, the source can be used to open a zip
     archive from.</p>
 <p class="Pp">The file is opened and read when the data from the source is used,
@@ -117,12 +118,16 @@ Upon successful completion, the created source is returned. Otherwise,
   <a class="Xr" href="zip_file_add.html">zip_file_add(3)</a>,
   <a class="Xr" href="zip_file_replace.html">zip_file_replace(3)</a>,
   <a class="Xr" href="zip_source.html">zip_source(3)</a>,
+  <a class="Xr" href="zip_source_file.html">zip_source_file(3)</a>,
   <a class="Xr" href="zip_source_win32a.html">zip_source_win32a(3)</a>,
   <a class="Xr" href="zip_source_win32handle.html">zip_source_win32handle(3)</a>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="HISTORY"><a class="permalink" href="#HISTORY">HISTORY</a></h1>
 <code class="Fn">zip_source_win32w</code>() was added in libzip 1.0.
+<p class="Pp"><code class="Dv">ZIP_LENGTH_TO_END</code> and
+    <code class="Dv">ZIP_LENGTH_UNCHECKED</code> were added in libzip
+  1.10.1.</p>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="AUTHORS"><a class="permalink" href="#AUTHORS">AUTHORS</a></h1>
@@ -134,7 +139,7 @@ Upon successful completion, the created source is returned. Otherwise,
 </div>
 <table class="foot">
   <tr>
-    <td class="foot-date">June 22, 2018</td>
+    <td class="foot-date">June 30, 2023</td>
     <td class="foot-os">NiH</td>
   </tr>
 </table>
